--- a/admin.html
+++ b/admin.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>排行榜管理后台 - Limbus Company</title>
     <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/limbus-theme-v2.css">    <link rel="stylesheet" href="/css/custom-dialog.css">    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@400;600;700&family=Cinzel:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/css/limbus-theme-v2.css">
+    <link rel="stylesheet" href="/css/module/admin-common.css">
+    <link rel="stylesheet" href="/css/custom-dialog.css">    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@400;600;700&family=Cinzel:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
     <style>
