feat: 修复系统配置功能 - 创建admin-settings.html系统配置页面，统一导航链接

--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -19,19 +19,19 @@
         <p class="sidebar-subtitle">数据统计中心</p>
       </div>
       <nav class="sidebar-nav">
-        <a href="#" class="nav-item active" data-tab="dashboard">
+        <a href="admin-dashboard.html" class="nav-item active" data-tab="dashboard">
           <i class="fas fa-chart-line"></i>
           <span>数据统计</span>
         </a>
-        <a href="#" class="nav-item" data-tab="guides">
+        <a href="admin-guides.html" class="nav-item" data-tab="guides">
           <i class="fas fa-book"></i>
           <span>攻略审核</span>
         </a>
-        <a href="#" class="nav-item" data-tab="users">
+        <a href="admin.html" class="nav-item" data-tab="users">
           <i class="fas fa-users"></i>
           <span>用户管理</span>
         </a>
-        <a href="#" class="nav-item" data-tab="settings">
+        <a href="admin-settings.html" class="nav-item" data-tab="settings">
           <i class="fas fa-cog"></i>
           <span>系统配置</span>
         </a>
