--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -27,7 +27,7 @@
           <i class="fas fa-book"></i>
           <span>攻略审核</span>
         </a>
-        <a href="admin.html" class="nav-item" data-tab="users">
+        <a href="admin-users.html" class="nav-item" data-tab="users">
           <i class="fas fa-users"></i>
           <span>用户管理</span>
         </a>
