--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -3,13 +3,199 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>管理员后台 - 数据统计</title>
+  <title>数据统计 - 管理后台</title>
   <link rel="stylesheet" href="/css/reset.css">
   <link rel="stylesheet" href="/css/limbus-theme-v2.css">
   <link rel="stylesheet" href="/css/module/admin-common.css">
-  <link rel="stylesheet" href="/css/module/admin-dashboard.css">
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <style>
+    .time-range-selector {
+      display: flex;
+      gap: 8px;
+      background: var(--lc-bg-card);
+      padding: 4px;
+      border-radius: 6px;
+      border: 1px solid var(--lc-border);
+    }
+
+    .range-btn {
+      padding: 8px 16px;
+      border: none;
+      background: transparent;
+      color: var(--lc-text-secondary);
+      font-size: 14px;
+      cursor: pointer;
+      border-radius: 4px;
+      transition: all 0.3s;
+    }
+
+    .range-btn:hover {
+      color: var(--lc-gold);
+    }
+
+    .range-btn.active {
+      background: var(--lc-gold);
+      color: #000;
+      font-weight: 600;
+    }
+
+    .refresh-info {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      color: var(--lc-text-muted);
+      font-size: 0.85rem;
+    }
+
+    .stats-cards {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 20px;
+      margin-bottom: 30px;
+    }
+
+    .stat-card {
+      background: var(--lc-bg-card);
+      border: 1px solid var(--lc-border);
+      border-radius: 8px;
+      padding: 24px;
+      display: flex;
+      align-items: center;
+      gap: 16px;
+      transition: all 0.3s;
+    }
+
+    .stat-card:hover {
+      transform: translateY(-3px);
+      border-color: var(--lc-border-light);
+      box-shadow: var(--lc-shadow);
+    }
+
+    .stat-icon {
+      width: 56px;
+      height: 56px;
+      border-radius: 8px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 24px;
+      background: rgba(201, 169, 97, 0.1);
+      color: var(--lc-gold);
+    }
+
+    .stat-info h3 {
+      font-size: 0.85rem;
+      color: var(--lc-text-muted);
+      margin-bottom: 4px;
+      text-transform: uppercase;
+      letter-spacing: 0.5px;
+    }
+
+    .stat-value {
+      font-size: 2rem;
+      font-weight: 700;
+      color: var(--lc-gold);
+      margin-bottom: 4px;
+    }
+
+    .stat-label {
+      font-size: 0.75rem;
+      color: var(--lc-text-muted);
+    }
+
+    .chart-section {
+      margin-bottom: 30px;
+    }
+
+    .chart-card {
+      background: var(--lc-bg-card);
+      border: 1px solid var(--lc-border);
+      border-radius: 8px;
+      padding: 24px;
+    }
+
+    .chart-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 20px;
+    }
+
+    .chart-header h3 {
+      font-size: 1.1rem;
+      color: var(--lc-gold);
+      font-family: 'Cinzel', serif;
+    }
+
+    .chart-legend {
+      display: flex;
+      gap: 16px;
+    }
+
+    .legend-item {
+      display: flex;
+      align-items: center;
+      gap: 6px;
+      font-size: 0.85rem;
+      color: var(--lc-text-secondary);
+    }
+
+    .legend-color {
+      width: 12px;
+      height: 12px;
+      border-radius: 2px;
+    }
+
+    .chart-container {
+      height: 300px;
+      position: relative;
+    }
+
+    .data-table-section {
+      margin-bottom: 30px;
+    }
+
+    .table-card {
+      background: var(--lc-bg-card);
+      border: 1px solid var(--lc-border);
+      border-radius: 8px;
+      padding: 24px;
+    }
+
+    .table-header {
+      margin-bottom: 20px;
+    }
+
+    .table-header h3 {
+      font-size: 1.1rem;
+      color: var(--lc-gold);
+      font-family: 'Cinzel', serif;
+    }
+
+    .trend-value {
+      font-weight: 600;
+    }
+
+    .trend-value.positive {
+      color: #27ae60;
+    }
+
+    .loading-state {
+      text-align: center;
+      padding: 40px;
+      color: var(--lc-text-muted);
+    }
+
+    .loading-state i {
+      font-size: 32px;
+      animation: spin 1s linear infinite;
+    }
+
+    @keyframes spin {
+      to { transform: rotate(360deg); }
+    }
+  </style>
 </head>
 <body>
   <div class="admin-container">
@@ -36,6 +222,13 @@
           <span>系统配置</span>
         </a>
       </nav>
+      <div class="sidebar-footer">
+        <div class="admin-user">
+          <i class="fas fa-user-shield"></i>
+          <span class="username" id="currentUser">管理员</span>
+          <i class="fas fa-sign-out-alt logout-btn" onclick="logout()"></i>
+        </div>
+      </div>
     </aside>
 
     <main class="admin-main">
@@ -44,7 +237,7 @@
           <h1>数据统计仪表盘</h1>
           <p class="header-subtitle">实时监控平台用户数据</p>
         </div>
-        <div class="header-right">
+        <div class="header-right" style="display: flex; gap: 16px; align-items: center;">
           <div class="time-range-selector">
             <button class="range-btn active" data-range="day">日</button>
             <button class="range-btn" data-range="week">周</button>
@@ -57,99 +250,103 @@
         </div>
       </header>
 
-      <div class="dashboard-content">
-        <div class="stats-cards">
-          <div class="stat-card">
-            <div class="stat-icon" style="background: linear-gradient(135deg, #667eea, #764ba2);">
-              <i class="fas fa-users"></i>
-            </div>
-            <div class="stat-info">
-              <h3>总注册用户</h3>
-              <p class="stat-value" id="total-users">0</p>
-              <p class="stat-label">Total Users</p>
-            </div>
+      <div class="stats-cards">
+        <div class="stat-card">
+          <div class="stat-icon">
+            <i class="fas fa-users"></i>
           </div>
-
-          <div class="stat-card">
-            <div class="stat-icon" style="background: linear-gradient(135deg, #f093fb, #f5576c);">
-              <i class="fas fa-user-check"></i>
-            </div>
-            <div class="stat-info">
-              <h3>今日活跃用户</h3>
-              <p class="stat-value" id="today-active">0</p>
-              <p class="stat-label">DAU</p>
-            </div>
-          </div>
-
-          <div class="stat-card">
-            <div class="stat-icon" style="background: linear-gradient(135deg, #4facfe, #00f2fe);">
-              <i class="fas fa-history"></i>
-            </div>
-            <div class="stat-info">
-              <h3>昨日活跃用户</h3>
-              <p class="stat-value" id="yesterday-active">0</p>
-              <p class="stat-label">Yesterday</p>
-            </div>
-          </div>
-
-          <div class="stat-card">
-            <div class="stat-icon" style="background: linear-gradient(135deg, #43e97b, #38f9d7);">
-              <i class="fas fa-calendar-week"></i>
-            </div>
-            <div class="stat-info">
-              <h3>7日活跃用户</h3>
-              <p class="stat-value" id="week-active">0</p>
-              <p class="stat-label">7-Day Active</p>
-            </div>
-          </div>
-
-          <div class="stat-card">
-            <div class="stat-icon" style="background: linear-gradient(135deg, #fa709a, #fee140);">
-              <i class="fas fa-user-plus"></i>
-            </div>
-            <div class="stat-info">
-              <h3>今日新增用户</h3>
-              <p class="stat-value" id="today-new">0</p>
-              <p class="stat-label">New Today</p>
-            </div>
+          <div class="stat-info">
+            <h3>总注册用户</h3>
+            <p class="stat-value" id="total-users">-</p>
+            <p class="stat-label">Total Users</p>
           </div>
         </div>
 
-        <div class="chart-section">
-          <div class="chart-card">
-            <div class="chart-header">
-              <h3>用户增长趋势</h3>
-              <div class="chart-legend">
-                <span class="legend-item">
-                  <span class="legend-color" style="background: #667eea;"></span>
-                  新增用户
-                </span>
-              </div>
-            </div>
-            <div class="chart-container">
-              <canvas id="growthChart"></canvas>
-            </div>
+        <div class="stat-card">
+          <div class="stat-icon">
+            <i class="fas fa-user-check"></i>
+          </div>
+          <div class="stat-info">
+            <h3>今日活跃用户</h3>
+            <p class="stat-value" id="today-active">-</p>
+            <p class="stat-label">DAU</p>
           </div>
         </div>
 
-        <div class="data-table-section">
-          <div class="table-card">
-            <div class="table-header">
-              <h3>详细数据</h3>
+        <div class="stat-card">
+          <div class="stat-icon">
+            <i class="fas fa-history"></i>
+          </div>
+          <div class="stat-info">
+            <h3>昨日活跃用户</h3>
+            <p class="stat-value" id="yesterday-active">-</p>
+            <p class="stat-label">Yesterday</p>
+          </div>
+        </div>
+
+        <div class="stat-card">
+          <div class="stat-icon">
+            <i class="fas fa-calendar-week"></i>
+          </div>
+          <div class="stat-info">
+            <h3>7日活跃用户</h3>
+            <p class="stat-value" id="week-active">-</p>
+            <p class="stat-label">7-Day Active</p>
+          </div>
+        </div>
+
+        <div class="stat-card">
+          <div class="stat-icon">
+            <i class="fas fa-user-plus"></i>
+          </div>
+          <div class="stat-info">
+            <h3>今日新增用户</h3>
+            <p class="stat-value" id="today-new">-</p>
+            <p class="stat-label">New Today</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="chart-section">
+        <div class="chart-card">
+          <div class="chart-header">
+            <h3><i class="fas fa-chart-area"></i> 用户增长趋势</h3>
+            <div class="chart-legend">
+              <span class="legend-item">
+                <span class="legend-color" style="background: var(--lc-gold);"></span>
+                新增用户
+              </span>
             </div>
-            <div class="table-container">
-              <table class="data-table">
-                <thead>
-                  <tr>
-                    <th>日期</th>
-                    <th>新增用户</th>
-                    <th>累计用户</th>
-                  </tr>
-                </thead>
-                <tbody id="trend-table-body">
-                </tbody>
-              </table>
-            </div>
+          </div>
+          <div class="chart-container">
+            <canvas id="growthChart"></canvas>
+          </div>
+        </div>
+      </div>
+
+      <div class="data-table-section">
+        <div class="table-card">
+          <div class="table-header">
+            <h3><i class="fas fa-table"></i> 详细数据</h3>
+          </div>
+          <div class="table-container">
+            <table class="data-table">
+              <thead>
+                <tr>
+                  <th>日期</th>
+                  <th>新增用户</th>
+                  <th>活跃用户</th>
+                </tr>
+              </thead>
+              <tbody id="trend-table-body">
+                <tr>
+                  <td colspan="3" class="loading-state">
+                    <i class="fas fa-spinner"></i>
+                    <p>加载中...</p>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
           </div>
         </div>
       </div>
@@ -157,9 +354,22 @@
   </div>
 
   <script>
-    const API_BASE = '/api';
+    const token = localStorage.getItem('adminToken');
+    if (!token) {
+      window.location.href = 'admin-login.html';
+    }
+
+    const username = localStorage.getItem('adminUsername') || '管理员';
+    document.getElementById('currentUser').textContent = username;
+
     let growthChart = null;
     let currentRange = 'day';
+
+    function logout() {
+      localStorage.removeItem('adminToken');
+      localStorage.removeItem('adminUsername');
+      window.location.href = 'admin-login.html';
+    }
 
     document.addEventListener('DOMContentLoaded', () => {
       initDashboard();
@@ -182,34 +392,11 @@
           updateChart(currentRange);
         });
       });
-
-      document.querySelectorAll('.nav-item').forEach(item => {
-        item.addEventListener('click', (e) => {
-          e.preventDefault();
-          const tab = item.dataset.tab;
-          if (tab === 'dashboard') {
-            window.location.href = 'admin-dashboard.html';
-          } else if (tab === 'guides') {
-            window.location.href = 'admin-guides.html';
-          } else if (tab === 'users') {
-            window.location.href = 'admin-users.html';
-          } else if (tab === 'settings') {
-            window.location.href = 'admin-settings.html';
-          }
-        });
-      });
     }
 
     async function loadStats(range) {
       try {
-        const token = localStorage.getItem('admin_token');
-        if (!token) {
-          alert('请先登录管理员账号');
-          window.location.href = '/login.html';
-          return;
-        }
-
-        const response = await fetch(`${API_BASE}/stats?range=${range}`, {
+        const response = await fetch(`/api/stats?range=${range}`, {
           headers: { 'Authorization': `Bearer ${token}` }
         });
 
@@ -218,6 +405,7 @@
         if (result.code === 200) {
           updateStatsCards(result.data);
           updateTrendTable(result.data.trend);
+          updateChartData(result.data.trend);
           updateLastUpdateTime();
         } else {
           console.error('获取统计数据失败:', result.message);
@@ -228,20 +416,31 @@
     }
 
     function updateStatsCards(data) {
-      document.getElementById('total-users').textContent = data.totalUsers.toLocaleString();
-      document.getElementById('today-active').textContent = data.todayActiveUsers.toLocaleString();
-      document.getElementById('yesterday-active').textContent = data.yesterdayActiveUsers.toLocaleString();
-      document.getElementById('week-active').textContent = data.weekActiveUsers.toLocaleString();
-      document.getElementById('today-new').textContent = data.todayNewUsers.toLocaleString();
+      document.getElementById('total-users').textContent = (data.totalUsers || 0).toLocaleString();
+      document.getElementById('today-active').textContent = (data.todayActiveUsers || 0).toLocaleString();
+      document.getElementById('yesterday-active').textContent = (data.yesterdayActiveUsers || 0).toLocaleString();
+      document.getElementById('week-active').textContent = (data.weekActiveUsers || 0).toLocaleString();
+      document.getElementById('today-new').textContent = (data.todayNewUsers || 0).toLocaleString();
     }
 
     function updateTrendTable(trend) {
       const tbody = document.getElementById('trend-table-body');
+      if (!trend || trend.length === 0) {
+        tbody.innerHTML = `
+          <tr>
+            <td colspan="3" style="text-align: center; color: var(--lc-text-muted); padding: 40px;">
+              暂无数据
+            </td>
+          </tr>
+        `;
+        return;
+      }
+
       tbody.innerHTML = trend.map(row => `
         <tr>
           <td>${row.date}</td>
-          <td><span class="trend-value positive">+${row.count}</span></td>
-          <td>-</td>
+          <td><span class="trend-value positive">+${row.count || 0}</span></td>
+          <td>${row.active || '-'}</td>
         </tr>
       `).join('');
     }
@@ -256,15 +455,15 @@
           datasets: [{
             label: '新增用户',
             data: [],
-            borderColor: '#667eea',
-            backgroundColor: 'rgba(102, 126, 234, 0.1)',
+            borderColor: '#c9a961',
+            backgroundColor: 'rgba(201, 169, 97, 0.1)',
             borderWidth: 2,
             fill: true,
             tension: 0.4,
             pointRadius: 4,
             pointHoverRadius: 6,
-            pointBackgroundColor: '#667eea',
-            pointBorderColor: '#fff',
+            pointBackgroundColor: '#c9a961',
+            pointBorderColor: '#000',
             pointBorderWidth: 2
           }]
         },
@@ -276,10 +475,10 @@
               display: false
             },
             tooltip: {
-              backgroundColor: 'rgba(0, 0, 0, 0.8)',
-              titleColor: '#fff',
+              backgroundColor: 'rgba(0, 0, 0, 0.9)',
+              titleColor: '#c9a961',
               bodyColor: '#fff',
-              borderColor: 'rgba(255, 255, 255, 0.2)',
+              borderColor: 'rgba(201, 169, 97, 0.3)',
               borderWidth: 1,
               padding: 12,
               displayColors: false,
@@ -293,27 +492,23 @@
           scales: {
             x: {
               grid: {
-                color: 'rgba(255, 255, 255, 0.1)',
+                color: 'rgba(255, 255, 255, 0.05)',
                 drawBorder: false
               },
               ticks: {
                 color: 'rgba(255, 255, 255, 0.5)',
-                font: {
-                  size: 11
-                }
+                font: { size: 11 }
               }
             },
             y: {
               beginAtZero: true,
               grid: {
-                color: 'rgba(255, 255, 255, 0.1)',
+                color: 'rgba(255, 255, 255, 0.05)',
                 drawBorder: false
               },
               ticks: {
                 color: 'rgba(255, 255, 255, 0.5)',
-                font: {
-                  size: 11
-                },
+                font: { size: 11 },
                 callback: function(value) {
                   return value >= 0 ? value : '';
                 }
@@ -329,20 +524,16 @@
       });
     }
 
-    function updateChart(range) {
-      if (!growthChart) return;
+    function updateChartData(trend) {
+      if (!growthChart || !trend) return;
 
-      const response = fetch(`${API_BASE}/stats?range=${range}`, {
-        headers: { 'Authorization': `Bearer ${localStorage.getItem('admin_token')}` }
-      }).then(res => res.json())
-        .then(result => {
-          if (result.code === 200) {
-            const trend = result.data.trend;
-            growthChart.data.labels = trend.map(row => row.date);
-            growthChart.data.datasets[0].data = trend.map(row => row.count);
-            growthChart.update();
-          }
-        });
+      growthChart.data.labels = trend.map(row => row.date);
+      growthChart.data.datasets[0].data = trend.map(row => row.count || 0);
+      growthChart.update();
+    }
+
+    function updateChart(range) {
+      loadStats(range);
     }
 
     function updateLastUpdateTime() {
@@ -354,7 +545,6 @@
     function startAutoRefresh() {
       setInterval(() => {
         loadStats(currentRange);
-        updateChart(currentRange);
       }, 10 * 60 * 1000); // 每10分钟刷新一次
     }
   </script>
