--- a/admin-guides.html
+++ b/admin-guides.html
@@ -361,12 +361,12 @@
   </div>
 
   <script>
-    const token = localStorage.getItem('adminToken');
+    const token = localStorage.getItem('admin_token');
     if (!token) {
       window.location.href = 'admin-login.html';
     }
 
-    const username = localStorage.getItem('adminUsername') || '管理员';
+    const username = localStorage.getItem('admin_username') || '管理员';
     document.getElementById('currentUser').textContent = username;
 
     let currentStatus = 'pending';
@@ -375,8 +375,9 @@
     let currentGuideId = null;
 
     function logout() {
-      localStorage.removeItem('adminToken');
-      localStorage.removeItem('adminUsername');
+      localStorage.removeItem('admin_token');
+      localStorage.removeItem('admin_username');
+      localStorage.removeItem('admin_role');
       window.location.href = 'admin-login.html';
     }
 
