--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -209,6 +209,10 @@
           <i class="fas fa-chart-line"></i>
           <span>数据统计</span>
         </a>
+        <a href="admin.html" class="nav-item" data-tab="ranking">
+          <i class="fas fa-list-ol"></i>
+          <span>排行榜审核</span>
+        </a>
         <a href="admin-guides.html" class="nav-item" data-tab="guides">
           <i class="fas fa-book"></i>
           <span>攻略审核</span>
