--- a/admin-login.html
+++ b/admin-login.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="/css/module/admin-common.css">
   <link rel="stylesheet" href="/css/module/admin-dashboard.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <script src="/js/captcha-client.js"></script>
 </head>
 <body>
   <div class="admin-login-container">
