config: 配置Cloudflare Turnstile密钥
- 配置前端Site Key: 0x4AAAAAACZSYpsYj5RndDNV
- 配置后端Secret Key: 0x4AAAAAACZSYoh9xpG5XVkiTES5pYNugd4
- Turnstile人机验证现已完全配置

--- a/admin-login.html
+++ b/admin-login.html
@@ -54,7 +54,7 @@
 
   <script>
     const API_BASE = '/api';
-    const TURNSTILE_SITE_KEY = '0x4AAAAAAAxxxxxxxxxxxxxxxxxxxxxxxx'; // 替换为你的Site Key
+    const TURNSTILE_SITE_KEY = '0x4AAAAAACZSYpsYj5RndDNV'; // Cloudflare Turnstile Site Key
     let turnstileToken = null;
 
     document.addEventListener('DOMContentLoaded', () => {
