--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     
     <!-- Cloudflare Turnstile 脚本 -->
     <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
+    <script src="/js/turnstile.js"></script>
 </head>
 <body>
     <!-- 顶部导航栏 -->
