修复: Turnstile脚本加载顺序
- 将turnstile.js从<head>移动到<body>底部
- 确保Turnstile API脚本先加载完成
- 修复index.html和global-ranking.html

--- a/global-ranking.html
+++ b/global-ranking.html
@@ -15,7 +15,6 @@
     
     <!-- Cloudflare Turnstile -->
     <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
-    <script src="/js/turnstile.js"></script>
 </head>
 <body>
     <!-- 顶部导航栏 -->
@@ -1035,5 +1034,8 @@
             document.getElementById('help-modal').style.display = 'none';
         }
     </script>
+    
+    <!-- Turnstile 包装器脚本 -->
+    <script src="/js/turnstile.js"></script>
 </body>
 </html>
