--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
     
     <!-- Cloudflare Turnstile 脚本 -->
     <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
-    <script src="/js/turnstile.js"></script>
 </head>
 <body>
     <!-- 顶部导航栏 -->
@@ -574,6 +573,9 @@
         </div>
     </div>
 </body>
+
+<!-- Turnstile 包装器脚本 -->
+<script src="/js/turnstile.js"></script>
 
 <!-- 核心应用脚本 -->
 <!-- API 配置 -->
